--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>org.polyglotted</groupId>
     <artifactId>oss-parent</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>polyglotted parent pom</name>
@@ -55,7 +55,7 @@
         <url>https://github.com/polyglotted/oss-parent</url>
         <connection>scm:git:ssh://github.com/polyglotted/oss-parent.git</connection>
         <developerConnection>scm:git:git+ssh://git@github.com/polyglotted/oss-parent.git</developerConnection>
-        <tag>oss-parent-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
     <issueManagement>
         <system>GitHub Issue Management</system>
