--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>org.polyglotted</groupId>
     <artifactId>oss-parent</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>pom</packaging>
 
     <name>polyglotted parent pom</name>
@@ -55,7 +55,7 @@
         <url>https://github.com/polyglotted/oss-parent</url>
         <connection>scm:git:ssh://github.com/polyglotted/oss-parent.git</connection>
         <developerConnection>scm:git:git+ssh://git@github.com/polyglotted/oss-parent.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>oss-parent-1.0.1</tag>
     </scm>
     <issueManagement>
         <system>GitHub Issue Management</system>
@@ -325,7 +325,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore></ignore>
+                                        <ignore />
                                     </action>
                                 </pluginExecution>
                                 <pluginExecution>
@@ -338,7 +338,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore></ignore>
+                                        <ignore />
                                     </action>
                                 </pluginExecution>
                             </pluginExecutions>
