--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.polyglotted</groupId>
@@ -48,6 +49,11 @@
             <id>shankars</id>
             <name>Shankar Srinivasan</name>
             <email>shankars [dot] srinivasan [at] gmail [dot] com</email>
+        </developer>
+        <developer>
+            <id>meenamothish</id>
+            <name>Meena Mothish Babu</name>
+            <email>meena [dot] mothish [at] gmail [dot] com</email>
         </developer>
     </developers>
 
@@ -442,6 +448,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
+                <configuration>
+                    <systemProperties>
+                        <property>
+                            <name>net.sourceforge.cobertura.datafile</name>
+                            <value>target/cobertura/cobertura.ser</value>
+                        </property>
+                    </systemProperties>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -449,8 +463,18 @@
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <executions>
                     <execution>
+                        <id>clean</id>
+                        <phase>pre-site</phase>
                         <goals>
                             <goal>clean</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>instrument</id>
+                        <phase>site</phase>
+                        <goals>
+                            <goal>instrument</goal>
+                            <goal>cobertura</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -651,6 +675,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>${surefire.version}</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
             </plugin>
 
