--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 jdk:
 - oraclejdk7
-script: mvn --batch-mode --quiet --settings .travis-settings.xml deploy
+script: mvn --settings .travis-settings.xml test deploy
 env:
   global:
   - secure: HpSV19cWZ29AulSTxvvIg2SXb+/KaS+M8vDK9UztcJg9OHba4vO89rwV9GyLYiBaEUPpNzZV4QFsg/bUnqU2niPi13tgY7E7LVu4iZ2aHupg5jEVZK2p5PxK/b4ygwweSkC5yxfZujnnC/rrciTeAKEbNQXCGhZmbCRaduwRrnI=
