--- a/pom.xml
+++ b/pom.xml
@@ -173,11 +173,13 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>2.4.1</version>
+                    <version>2.5</version>
                     <configuration>
                         <mavenExecutorId>forked-path</mavenExecutorId>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
                         <useReleaseProfile>false</useReleaseProfile>
-                        <arguments>-Prelease</arguments>
+                        <releaseProfiles>release</releaseProfiles>
+                        <goals>deploy</goals>
                     </configuration>
                 </plugin>
 
@@ -205,7 +207,7 @@
                     <version>2.1</version>
                     <configuration>
                         <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                        <serverAuthId>sonatype-nexus-staging</serverAuthId>
+                        <serverAuthId>sonatype-nexus</serverAuthId>
                     </configuration>
                 </plugin>
 
