--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: java
 jdk:
-- oraclejdk7
-script: mvn help:effective-settings deploy --settings .travis-settings.xml
-before_install: echo $CI_PASSWD
+  - oraclejdk7
+script: mvn -q deploy --settings .travis-settings.xml
 env:
   global:
   - secure: PkYPm/fHMunZyNgBeGLZ3WTOQ8W3XBJl6igv0EYurxskuyIKudZ65Bjc+vO9mMepBBGDfpw7wWbfe+ctfDkkAUKL2tacd82JBK2OlZnjtGi/AooRlDm7hJBFmeYv9fRIk8E/ZbgF6qJy9UQoY1OmSjNRylw1O8VnKW0SvzxI0Ug=
