--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,7 @@
                     <artifactId>maven-release-plugin</artifactId>
                     <version>2.4.1</version>
                     <configuration>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
                         <mavenExecutorId>forked-path</mavenExecutorId>
                         <useReleaseProfile>false</useReleaseProfile>
                         <releaseProfiles>releasable</releaseProfiles>
@@ -451,7 +452,7 @@
 
     <profiles>
         <profile>
-            <id>release</id>
+            <id>releasable</id>
             <build>
                 <plugins>
                     <plugin>
