--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.polyglotted</groupId>
     <artifactId>oss-parent</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>polyglotted parent pom</name>
 
@@ -127,10 +127,6 @@
                     <version>2.7</version>
                 </plugin>
                 <plugin>
-                    <artifactId>maven-antrun-plugin</artifactId>
-                    <version>1.7</version>
-                </plugin>
-                <plugin>
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>2.4</version>
                     <dependencies>
@@ -166,9 +162,8 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>2.4.1</version>
+                    <version>2.4.2</version>
                     <configuration>
-                        <autoVersionSubmodules>true</autoVersionSubmodules>
                         <mavenExecutorId>forked-path</mavenExecutorId>
                         <useReleaseProfile>false</useReleaseProfile>
                         <releaseProfiles>releasable</releaseProfiles>
@@ -237,8 +232,8 @@
                         <configuration>
                             <rules>
                                 <requireJavaVersion>
-                                    <version>[1.7,)</version>
-                                    <message>[ERROR] The currently supported version of Java is 1.7 or higher</message>
+                                    <version>[1.6,)</version>
+                                    <message>[ERROR] The currently supported version of Java is 1.6 or higher</message>
                                 </requireJavaVersion>
                                 <requireMavenVersion>
                                     <version>[3.0,)</version>
@@ -259,7 +254,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.2</version>
                 <configuration>
                     <source>${javac.src.version}</source>
                     <target>${javac.target.version}</target>
@@ -285,6 +280,15 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <version>${cobertura.version}</version>
+                <configuration>
+                    <check>
+                        <haltOnFailure>true</haltOnFailure>
+                    </check>
+                    <formats>
+                        <format>html</format>
+                    </formats>
+                    <quiet>true</quiet>
+                </configuration>
                 <executions>
                     <execution>
                         <id>clean</id>
@@ -346,18 +350,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-scm-plugin</artifactId>
-                <version>1.8</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.scm</groupId>
-                        <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>${gitexe.version}</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
         </plugins>
 
         <extensions>
@@ -370,11 +362,6 @@
                 <groupId>org.apache.maven.scm</groupId>
                 <artifactId>maven-scm-manager-plexus</artifactId>
                 <version>1.8</version>
-            </extension>
-            <extension>
-                <groupId>org.kathrynhuxtable.maven.wagon</groupId>
-                <artifactId>wagon-gitsite</artifactId>
-                <version>0.3.1</version>
             </extension>
         </extensions>
     </build>
@@ -416,19 +403,11 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <version>${cobertura.version}</version>
-                <configuration>
-                    <check>
-                        <haltOnFailure>true</haltOnFailure>
-                    </check>
-                    <formats>
-                        <format>html</format>
-                    </formats>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>2.7.1</version>
+                <version>3.2</version>
                 <configuration>
                     <linkXref>true</linkXref>
                     <minimumTokens>100</minimumTokens>
@@ -519,6 +498,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.7</version>
                         <executions>
                             <execution>
                                 <id>copy-gpgs</id>
