added ci skip to release comment

--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,7 @@
                         <mavenExecutorId>forked-path</mavenExecutorId>
                         <useReleaseProfile>false</useReleaseProfile>
                         <releaseProfiles>releasable</releaseProfiles>
+                        <scmCommentPrefix>[mvn-release] [ci skip]</scmCommentPrefix>
                     </configuration>
                     <dependencies>
                         <dependency>
