--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.polyglotted</groupId>
     <artifactId>oss-parent</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>pom</packaging>
     <name>Polyglotted IO parent pom</name>
 
@@ -53,7 +53,7 @@
         <url>https://github.com/polyglotted/oss-parent</url>
         <connection>scm:git:ssh://github.com/polyglotted/oss-parent.git</connection>
         <developerConnection>scm:git:git+ssh://git@github.com/polyglotted/oss-parent.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>oss-parent-2.0.0</tag>
     </scm>
     <issueManagement>
         <system>GitHub Issue Management</system>
